@@ -4,11 +4,13 @@
 	cd ~/nco;git commit -a -m 'Version 5.1.5-alpha02: Champignons';git push
 	git tag -a 5.1.5-alpha02 -m 'all: EAMxx CF, ncks bnr_wrt fix; ncrcat: no_cll_mth';git push --tags
 
+	* ncremap acquire timeMonthly_avg_zMid iff necessary for vertical interpolation
+
 	* Infer CF-compliance from if global attribute Conventions contains "None yet" (currently true for SCREAMv1/EAMxx output)
 
 2023-02-22  Charlie Zender  <zender@uci.edu>
 
-	* ncremap() re-enable plev_nm_out options, default to plev not lev for nco_vrt_grd_prs
+	* ncremap re-enable plev_nm_out options, default to plev not lev for nco_vrt_grd_prs
 
 2023-02-20  Charlie Zender  <zender@uci.edu>
 
